# robot

./: CODEX_WORKSPACE_SCAN.md  sebot-t710-competition.code-workspace
sebot_factory/devel/: .catkin  _setup_util.py
sebot_factory/devel/lib/pkgconfig/: sebot_factory.pc  sebot_marking.pc
sebot_factory/devel/lib/sebot_factory/: sebot_arm  sebot_factory  sebot_summary  sebot_yolo
sebot_factory/devel/lib/sebot_marking/: sebot_marking
sebot_factory/src/sebot_factory/: CMakeLists.txt  package.xml
sebot_factory/src/sebot_factory/include/: arm.hpp  camera.hpp  detection.hpp  json.hpp  tinyxml.hpp  tools.hpp
sebot_factory/src/sebot_factory/launch/: sebot_arm.launch  sebot_factory.launch  sebot_ordering.launch  sebot_paying.launch  sebot_picking.launch  sebot_yolo.launch
sebot_factory/src/sebot_factory/res/: location.xml
sebot_factory/src/sebot_factory/res/model/: config_ppncnms.json  config_ppncnna.json  deploy_paddle.ro  io_paddle.json  label_list.txt  nms.tar  post.onnx
sebot_factory/src/sebot_factory/src/: .picking.cpp.swp  confirm.cpp  factory.cpp  picking.cpp  summary.cpp
sebot_factory/src/sebot_factory/unit/: arm.cpp  order.cpp  pay.cpp  pick.cpp  yolo.cpp
sebot_factory/src/sebot_marking/: CMakeLists.txt
sebot_factory/src/sebot_marking/include/: qnode.hpp  qrviz.hpp  slam.h  tinyxml.h
sebot_factory/src/sebot_marking/launch/: sebot_marking.launch
sebot_factory/src/sebot_marking/resources/: location.xml  location.yaml
sebot_factory/src/sebot_marking/src/: CCtrlDashBoard.cpp  addtopics.cpp  main.cpp  qnode.cpp  qrviz.cpp  slam.cpp  tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
sebot_factory/src/sebot_marking/ui/: slam.ui
sebot_ros_kits/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
sebot_ros_kits/devel/include/amcl/: AMCLConfig.h
sebot_ros_kits/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
sebot_ros_kits/devel/include/global_planner/: GlobalPlannerConfig.h
sebot_ros_kits/devel/lib/amcl/: amcl
sebot_ros_kits/devel/lib/base_local_planner/: point_grid
sebot_ros_kits/devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
sebot_ros_kits/devel/lib/fake_localization/: fake_localization
sebot_ros_kits/devel/lib/global_planner/: planner
sebot_ros_kits/devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
sebot_ros_kits/devel/lib/hector_map_server/: hector_map_server
sebot_ros_kits/devel/lib/map_server/: map_saver  map_server  rtest
sebot_ros_kits/devel/lib/move_base/: move_base
sebot_ros_kits/devel/lib/navfn/: navfn_node
sebot_ros_kits/devel/lib/pkgconfig/: amcl.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  fake_localization.pc  global_planner.pc  gmapping.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_slam_launch.pc  map_server.pc  move_base.pc  move_slow_and_clear.pc  nav_core.pc  navfn.pc  robot_pose_ekf.pc  rotate_recovery.pc  rplidar_ros.pc  sebot_navigation.pc  sebot_robot.pc  sebot_slam.pc  sebot_speech.pc  sebot_talon.pc  sebot_talon_moveit.pc  sebot_urdf.pc  sebot_visions.pc  voxel_grid.pc
sebot_ros_kits/devel/lib/robot_pose_ekf/: robot_pose_ekf
sebot_ros_kits/src/sebot_driver/robot_pose_ekf/: CMakeLists.txt
sebot_ros_kits/src/sebot_driver/robot_pose_ekf/include/robot_pose_ekf/: odom_estimation_node.h
sebot_ros_kits/src/sebot_driver/robot_pose_ekf/launch/: robot_pose_ekf.launch
sebot_ros_kits/src/sebot_driver/robot_pose_ekf/src/: odom_estimation.cpp  odom_estimation_node.cpp
sebot_ros_kits/src/sebot_driver/sebot_urdf/: CMakeLists.txt  package.xml
sebot_ros_kits/src/sebot_driver/sebot_urdf/launch/: sebot_urdf.launch
sebot_ros_kits/src/sebot_driver/sebot_urdf/meshes/: base_footprint.STL  camera.STL  laser.STL  ultraLF.STL  ultraMB.STL  ultraMF.STL  ultraRF.STL  x_wheel1.STL  x_wheel2.STL  x_wheel3.STL  x_wheel4.STL
sebot_ros_kits/src/sebot_driver/sebot_urdf/urdf/: sebot_urdf.urdf
sebot_ros_kits/src/sebot_navigation/sebot_navigation/: CMakeLists.txt  package.xml
sebot_ros_kits/src/sebot_navigation/sebot_navigation/include/: multinavi.hpp  tinystr.h
sebot_ros_kits/src/sebot_navigation/sebot_navigation/launch/: sebot_multinavi.launch  sebot_navigation.launch
sebot_ros_kits/src/sebot_navigation/sebot_navigation/map/: map.pgm  map.yaml
sebot_ros_kits/src/sebot_navigation/sebot_navigation/param/: amcl.xml  costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  move_base.xml  move_base_params.yaml  planner_global_params.yaml  planner_local_params.yaml
sebot_ros_kits/src/sebot_navigation/sebot_navigation/rviz/: navigation.rviz
sebot_ros_kits/src/sebot_navigation/sebot_navigation/src/: multinavi.cpp
sebot_ros_kits/src/sebot_robot/: CMakeLists.txt  package.xml
sebot_ros_kits/src/sebot_robot/include/: uart.hpp  util.hpp
sebot_ros_kits/src/sebot_robot/launch/: sebot_joystick.launch  sebot_keyboard.launch  sebot_odom.launch  sebot_transform.launch
sebot_ros_kits/src/sebot_robot/rviz/: odom.rviz
sebot_ros_kits/src/sebot_robot/src/: controller.cpp  joystick.cpp  keyboards.cpp  transform.cpp
sebot_ros_kits/src/sebot_slam/sebot_slam/: CMakeLists.txt
sebot_ros_kits/src/sebot_slam/sebot_slam/include/: auto_slam.h  bfs.h  frontier_search.h  map2costmap.h
sebot_ros_kits/src/sebot_slam/sebot_slam/launch/: sebot_auto_gmapping.launch  sebot_gmapping.launch  sebot_map_save.launch
sebot_ros_kits/src/sebot_slam/sebot_slam/param/: auto_slam.xml  gmapping.xml  hector.xml
sebot_ros_kits/src/sebot_slam/sebot_slam/rviz/: autoslam.rviz  slam.rviz
sebot_ros_kits/src/sebot_slam/sebot_slam/src/: auto_slam.cpp  frontier_search.cpp  map2costmap.cpp
sebot_ros_kits/src/sebot_speech/: CMakeLists.txt  package.xml
sebot_ros_kits/src/sebot_speech/launch/: sebot_audio.xml
sebot_ros_kits/src/sebot_speech/scripts/: sebot_audio.py
sebot_ros_kits/src/sebot_visions/: CMakeLists.txt  package.xml
sebot_ros_stdr/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
(+273 files in other folders)
