<?xml version="1.0"?>
<package format="2">
  <name>sebot_speech</name>
  <version>0.0.0</version>
  <description>The sebot_speech package</description>

  <maintainer email="sasu@saishukeji.com">sasu</maintainer>

  <license>SASU</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>